ocaml/testsuite/tests/tool-toplevel/unnamed_layouts_4.compilers.reference
Line 15, characters 0-44:
15 | let (String.(((_ : _) : _)) : _) : _ = #3.14;;
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: Types of unnamed expressions must have layout value when using
       the toplevel, but this expression has layout float64.

